--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,9 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        if: success()
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages  # Branch to deploy to
-          folder: dist  # Change if your build output folder is different
-          clean: true
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git remote set-url origin https://x-access-token:${{ secrets.ACCESS_TOKEN }}@github.com/${{ github.repository }}.git
+          npm run build
+          npm run deploy
