--- a/.github/workflows/seo-audit.yml
+++ b/.github/workflows/seo-audit.yml
@@ -1,5 +1,9 @@
 name: SEO Audit
-on: [schedule]
+on:
+    schedule:
+        - cron: '*/10 * * * *'
+    workflow_dispatch:
+
 jobs:
     audit:
         runs-on: ubuntu-latest
