--- a/.github/workflows/seo-audit.yml
+++ b/.github/workflows/seo-audit.yml
@@ -8,7 +8,9 @@ jobs:
     audit:
         runs-on: ubuntu-latest
         steps:
-            - uses: treosh/lighthouse-ci-action@v3
+            - uses: actions/checkout@v4
+            - name: Audit URLs using Lighthouse
+              uses: treosh/lighthouse-ci-action@v12
               with:
                   urls: |
                       https://scion-softworks.github.io
