--- a/.github/workflows/seo-audit.yml
+++ b/.github/workflows/seo-audit.yml
@@ -3,6 +3,9 @@ on:
     schedule:
         - cron: '*/10 * * * *'
     workflow_dispatch:
+    push:
+        branches:
+            - main
 
 jobs:
     audit:
