--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "core-js": "^3.8.3",
     "particles.js": "^2.0.0",
     "vue": "^3.5.13",
