--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
-    "@vueuse/head": "^2.0.0",
+    "@unhead/vue": "^2.0.0-beta.2",
     "core-js": "^3.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
