--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,7 +1,7 @@
 name: Audit
 on:
     schedule:
-        - cron: '*/10 * * * *'
+        - cron: '0 * * * *'
     workflow_dispatch:
     push:
         branches:
